--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!Doctype html>
 <html>
-<h1>Hello This is Archit, Welcome to my new Site, I will be exploring JavaScript over here</h1>
+  <body style="background-color:yellow;">
+      <h1 style="background-color:black; color: white;">Hello This is Archit, Welcome to my new Site, I will be exploring JavaScript over here</h1>
+      <p>This will have more HTML</p>
+    <html>
 </html>
