--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body style="background-color:blue;">
       <h1 style="background-color:black; color: white;">Hello This is Archit, Welcome to my new Site, I will be exploring JavaScript over here</h1>
-      <p>This will have more HTML</p>
+      <p>Coming Soon!!</p>
     <html>
 </html>
