--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 <html>
-  <body style="background-color:blue;">
+  <body style="background-color:yellow;">
       <h1 style="background-color:black; color: white;">Hello This is Archit, Welcome to my new Site, I will be exploring JavaScript over here</h1>
       <p>Coming Soon!!</p>
     <html>
