--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
-  <body style="background-color:yellow;">
-      <h1 style="background-color:black; color: white;">Hello This is Archit, Welcome to my new Site, I will be exploring JavaScript over here</h1>
+  <body style="background-color:blue;">
+      <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, I will be exploring JavaScript over here</h1>
       <p>Coming Soon!!</p>
     <html>
 </html>
