--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body style="background-color:blue ;">
       <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
-      <p>Coming Soon!!</p>
+      <p>background-color:blue; color: white;"Coming Soon!!"</p>
     <html>
 </html>
