--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
-  <body style="background-color:yellow;">
+  <body style="background-color:blue;">
       <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
-      <p>background-color:blue; color: white;"Coming Soon!!"</p>
+      <p>"Coming Soon!!"</p>
     <html>
 </html>
