--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <body style="background-color:yellow;">
       <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
+     <h2 style="background-color:blue;  color: white;"Thank you for visiting this site">
       <p>"Coming Soon!!"</p>
     <html>
 </html>
