--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 <html>
-  <body style="background-color:yellow;">
+  <body style="background-color:blue;">
       <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
      <h2 style="background-color:blue;  color: white;"Thank you for visiting this site">
       <p>"Coming Soon!!"</p>
