--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body style="background-color:rainbow;">
       <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
-      <p>"Coming Soon!!"</p>
+      <p>"contents are coming soon!"</p>
       <p>"Thank you for visiting this site"</p>
     <html>
 </html>
