--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
-  <body style="background-color:rainbow;">
-      <h1 style="background-color:blue; color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
+  <body style="background-color:blue;">
+      <h1 style="color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
       <p>"contents are coming soon!"</p>
       <p>"Thank you for visiting this site"</p>
     <html>
