--- a/Pizza.html
+++ b/Pizza.html
@@ -12,7 +12,7 @@
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
         
-        <p>Pizza is a savory dish of <em>Italian decsent</em> origin consisting of a usually round, 
+        <p>Pizza is a savory dish of <em>Italian decsent</em> consisting of a usually round, 
 	flattened base of wheat-based dough topped with tomatoes, cheese, 
 	and often various other <strong>ingredients</strong> which is then baked at a high 
 	temperature, traditionally in a wood-fired oven. </p>
