--- a/Pizza.html
+++ b/Pizza.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Archit">
         <title>The diverse types of pizza</title>
     </head>
-    <body>
+    <body style="background-color:blue ;">
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
         
