--- a/Pizza.html
+++ b/Pizza.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head style="background-color:violet;">
+    <head style="background-color:violet ;">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,7 +8,7 @@
         <meta name="author" content="Archit">
         <title>The diverse types of pizza</title>
     </head>
-    <body
+    <body>
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
         
