--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!Doctype html>
 <html>
-  <body style="background-color:blue;">
-      <h1 style="color: white;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
-      <h2 style="color: white;">"Contents are coming soon!"</h2>
-      <h3 style="color: white;">"Thank you for visiting this site"</h3>
+  <body style="background-color:black ;">
+      <h1 style="color: yellow;">Hello This is Archit, Welcome to my new Site, and under this text I will be exploring the Javascript language</h1>
+      <h2 style="color: yellow;">"Contents are coming soon!"</h2>
+      <h3 style="color: yellow;">"Thank you for visiting this site"</h3>
     <html>
 </html>
