--- a/puppy.html
+++ b/puppy.html
@@ -5,7 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="keywords" content="puppy facts,puppy,bichon frise,dogs,doggies,puppies,doggie,">
-        <meta name="author" content="Archit & Gauri">
+        <meta name="author" content="Archit & Gauri & Ishan">
         <title>The fantastic world of Puppies</title>
     </head>
-  <body style="background-color:pink;">
+  <body style="background-color:pink ;">
+<h1>The fantastic world of puppies</h1> 
+        <h2></h2>
+        
+        <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
+        <img src="cheese.jpeg" width="">
+
+	<p>
+	
+		<a href ></a>
+	
+	</p>
+
+    </body>
+</html>
