--- a/puppy.html
+++ b/puppy.html
@@ -8,12 +8,12 @@
         <meta name="author" content="Archit & Gauri & Ishan">
         <title>The fantastic world of Puppies</title>
     </head>
-  <body style="background-color:pink;">
+  <body style="background-color:pink ;">
 <h1>The fantastic world of puppies</h1> 
         <h2></h2>
         
         <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
-        <img src="cheese.jpeg" width="">
+        <img src="puppy 1.jpeg" width="">
 
 	<p>
 	
