--- a/puppy.html
+++ b/puppy.html
@@ -13,7 +13,7 @@
         <h2></h2>
         
         <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
-        <img src="puppy 1.jpeg" width="">
+        <img src="puppy_1.jpeg" width="">
 
 	<p>
 	
