--- a/puppy.html
+++ b/puppy.html
@@ -27,10 +27,10 @@
 		Here are links to other sites I made.
 		
 		
-		<a href="">https://archit-mishra.github.io/js/Pizza.html</a>
+		<a href="https://archit-mishra.github.io/js/pizza.html">click here for pizza</a>
 		
 		
-		<a href="">https://archit-mishra.github.io/js</a>
+		<a href="https://archit-mishra.github.io/js/">click here for java</a>
 	<p>
 		
     </body>
