--- a/puppy.html
+++ b/puppy.html
@@ -8,9 +8,9 @@
         <meta name="author" content="Archit & Gauri & Ishan">
         <title>The fantastic world of Puppies</title>
     </head>
-  <body style="background-color:#FFCC99;">
+  <body style="background-color:#FFFFCC; ">
 <h1>The fantastic world of puppies</h1> 
-        <h2></h2>
+        <h2>h</h2>
         
         <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
         <img src="puppy_1.jpeg" width="">
@@ -27,7 +27,7 @@
 		Here are links to other sites I made.
 		
 		
-		<a href="https://archit-mishra.github.io/js/pizza.html">click here for pizza</a>
+		<a href="https://archit-mishra.github.io/js/Pizza.html">click here for pizza</a>
 		
 		
 		<a href="https://archit-mishra.github.io/js/">click here for java</a>
