--- a/puppy.html
+++ b/puppy.html
@@ -10,16 +10,15 @@
     </head>
   <body style="background-color:#FFFFCC;">
 <h1>The fantastic world of puppies</h1> 
-        <h2>h</h2>
+        <h2>here you will learn all about the dog breed Bichon Frise</h2>
         
         <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
         <img src="puppy_1.jpeg" width="">
 
 	<p>The Bichon Frise is a small dog that weighs approximately 5–10 kg (10–20 lbs) and stands 23–30 cm (9–12 in) at the withers, but slightly larger dogs are not uncommon.
 	The skull is slightly rounded and the muzzle is not pointy. The tail is groomed to be long and curly and is carried over the back. It has a black nose and dark round eyes;
-	its white hair consists of a curly, dense coat with little shedding (much like a poodle in this respect), although many of the breed do tend to have less curly hair than others.
-	A small amount of buff, cream, or apricot colour may be seen around its ears, snout, paws or body, but normally these colours do not exceed 10% of its body.
-	FCI/AKC Standard coat colour is pure white; other colours such as apricot or grey and brown are not recognised. A white coat is preferred in the show ring.
+	its white hair consists of a curly, dense coat with little shedding, although many of the breed do tend to have less curly hair than others. A small amount of buff,
+	cream, or apricot colour may be seen around its ears, snout, paws or body, but normally these colours are not dominant on its body.The standard coat colour is pure white.
 	The head and legs are proportionate in size to the body, and the ears and tail are natural (not docked or cropped). The coat is trimmed often to make the hair seem like an even length.
 	Bichon Frises have a medium-high intelligence.</p>
 	
