--- a/Pizza.html
+++ b/Pizza.html
@@ -7,6 +7,27 @@
         <meta name="keywords" content="pizza,cheese,hawaiian,vegetable">
         <meta name="author" content="Archit">
         <title>The diverse types of pizza</title>
+	 <link rel="styles".css>
+	 <style>
+		body {
+   		 font-family: verdana;
+		}
+		#mainHeader {
+		    background: orange;
+		}
+		h1 {
+		    color: white;
+		    text-align: center;
+		}
+		h2 {
+		    text-align: center;
+		}
+
+		p {
+		    font-family: verdana;
+		    font-size: 20px;
+		} 
+	 <style>	 
     </head>
     <body style="background-color:yellow;">
         <h1>The Diverse Types of Pizza</h1> 
