--- a/Pizza.html
+++ b/Pizza.html
@@ -7,7 +7,6 @@
         <meta name="keywords" content="pizza,cheese,hawaiian,vegetable">
         <meta name="author" content="Archit">
         <title>  The diverse types of pizza  </title>
-	 <link rel="styles".css>
 	 <style>
 		body {
    		 font-family: verdana;
@@ -30,7 +29,7 @@
 	 <style>	 
     </head>
     <body style="background-color:yellow;">
-	<header>
+	<header id="mainHeader">
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
         </header>
