--- a/Pizza.html
+++ b/Pizza.html
@@ -26,14 +26,17 @@
 		    font-family: verdana;
 		    font-size: 20px;
 		} 
+		 #p1 {
+		    
+		} 
 	 <style>	 
     </head>
     <body style="background-color:yellow;">
-	<header id="mainHeader">
+	<header id ="mainheader">	 
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
-        </header>
-        <p>Pizza is a savory dish of <em>Italian decsent</em> consisting of a usually round, 
+	</header>
+        <p id ="p1">Pizza is a savory dish of <em>Italian decsent</em> consisting of a usually round, 
 	flattened base of wheat-based dough topped with tomatoes, cheese, 
 	and often various other <strong>ingredients</strong> which is then baked at a high 
 	temperature, traditionally in a wood-fired oven. </p>
