--- a/Pizza.html
+++ b/Pizza.html
@@ -29,22 +29,22 @@
 		 #p1 {
 		     border: 6px dashed yellow;
 		} 
-	 </style>	 
+	 <style>	 
     </head>
-    <body style="background-color:yellow ;">
-	<header id="mainHeader">	 
+    <body style="background-color:yellow;">
+	<header id ="mainheader">	 
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
 	</header>
-        <p id="p1">Pizza is a savory dish of <em>Italian decsent</em> consisting of a usually round, 
+        <p id ="p1">Pizza is a savory dish of <em>Italian decsent</em> consisting of a usually round, 
 	flattened base of wheat-based dough topped with tomatoes, cheese, 
 	and often various other <strong>ingredients</strong> which is then baked at a high 
 	temperature, traditionally in a wood-fired oven. </p>
-        <img src="cheese.jpeg">
+        <img src="cheese.jpeg" width="">
 
 	<p>
 	
-		<a href >Hello</a>
+		<a href "https://en.wikipedia.org/wiki/Pizza" >Click here for more</a>
 	
 	</p>
 
