--- a/Pizza.html
+++ b/Pizza.html
@@ -32,7 +32,7 @@
 	 <style>	 
     </head>
     <body style="background-color:yellow;">
-	<header id ="mainheader">	 
+	<header id ="mainHeader">	 
         <h1>The Diverse Types of Pizza</h1> 
         <h2>Over here we can see how peoples opinions vary on pizza.</h2>
 	</header>
@@ -40,11 +40,11 @@
 	flattened base of wheat-based dough topped with tomatoes, cheese, 
 	and often various other <strong>ingredients</strong> which is then baked at a high 
 	temperature, traditionally in a wood-fired oven. </p>
-        <img src="cheese.jpeg" width="">
+        <img src="cheese.jpeg">
 
 	<p>
 	
-		<a href></a>
+		<a href>Bye</a>
 	
 	</p>
 
