--- a/puppy.html
+++ b/puppy.html
@@ -8,15 +8,15 @@
         <meta name="author" content="Archit & Gauri & Ishan">
         <title>The fantastic world of Puppies</title>
     </head>
-  <body style="background-color:#FFFFCC;">
+  <body style="background-color:#FFFFCC ;">
 <h1>The fantastic world of puppies</h1> 
         <h2>here you will learn all about the dog breed Bichon Frise</h2>
         
         <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
         <img src="puppy_1.jpeg" width="">
 
-	<p>The Bichon Frise is a small dog that weighs approximately 5–10 kg (10–20 lbs) and stands 23–30 cm (9–12 in) at the withers, but slightly larger dogs are not uncommon.
-	The skull is slightly rounded and the muzzle is not pointy. The tail is groomed to be long and curly and is carried over the back. It has a black nose and dark round eyes;
+	<p>The Bichon Frise is a small dog that weighs approximately 5–10 kg (10–20 lbs) and stands 23–30 cm (9–12 in) at the withers, but slightly larger dogs aren't uncommon.
+	It's head is slightly rounded and the muzzle is not pointy. The tail is groomed to be long and curly and is carried over the back. It has a black nose and dark round eyes;
 	its white hair consists of a curly, dense coat with little shedding, although many of the breed do tend to have less curly hair than others. A small amount of buff,
 	cream, or apricot colour may be seen around its ears, snout, paws or body, but normally these colours are not dominant on its body.The standard coat colour is pure white.
 	The head and legs are proportionate in size to the body, and the ears and tail are natural (not docked or cropped). The coat is trimmed often to make the hair seem like an even length.
@@ -26,10 +26,10 @@
 		Here are links to other sites I made.  
 		
 		
-		<a href="https://archit-mishra.github.io/js/Pizza.html">click here for pizza</a>
+		<a href="https://archit-mishra.github.io/js/Pizza.html"><button>click here for pizza</button></a>
 		
 		
-		<a href="https://archit-mishra.github.io/js/">click here for java</a>
+		<a href="https://archit-mishra.github.io/js/"><button>click here for java</Button></a>
 	<p>
 		
     </body>
