--- a/puppy.html
+++ b/puppy.html
@@ -6,30 +6,31 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="keywords" content="puppy facts,puppy,bichon frise,dogs,doggies,puppies,doggie,">
         <meta name="author" content="Archit & Gauri & Ishan">
-        <title>The fantastic world of Puppies</title>
+        <title>कुत्ते की शानदार दुनिया</title>
     </head>
   <body style="background-color:#FFFFCC ;">
-<h1>The fantastic world of puppies</h1> 
-        <h2>here you will learn all about the dog breed Bichon Frise</h2>
+<h1>कुत्ते की शानदार दुनिया</h1> 
+        <h2>यहाँ आप कुत्ते की नस्ल बिचोन फ्रिज़ के बारे में जानेंगे</h2>
         
-        <p>A Bichon Frise, meaning 'curly lap dog') is a small breed of dog of the bichon type. The Bichon Frise is a member of the Non-sporting Group of dog breeds in the United States, and a member of the Toy dog Group in the United Kingdom</p>
+        <p>एक बिचोन फ्रेज़, जिसका अर्थ है 'घुंघराले लैप डॉग') बिचोन प्रकार के कुत्ते की एक छोटी नस्ल है। बिचोन फ्रिज़ संयुक्त राज्य अमेरिका में कुत्तों की नस्लों के गैर-खेल समूह का सदस्य है, और यूनाइटेड किंगडम में 
+	खिलौना कुत्ता समूह का सदस्य है</p>
         <img src="puppy_1.jpeg" width="">
 
-	<p>The Bichon Frise is a small dog that weighs approximately 5–10 kg (10–20 lbs) and stands 23–30 cm (9–12 in) at the withers, but slightly larger dogs aren't uncommon.
-	It's head is slightly rounded and the muzzle is not pointy. The tail is groomed to be long and curly and is carried over the back. It has a black nose and dark round eyes;
-	its white hair consists of a curly, dense coat with little shedding, although many of the breed do tend to have less curly hair than others. A small amount of buff,
-	cream, or apricot colour may be seen around its ears, snout, paws or body, but normally these colours are not dominant on its body.The standard coat colour is pure white.
-	The head and legs are proportionate in size to the body, and the ears and tail are natural (not docked or cropped). The coat is trimmed often to make the hair seem like an even length.
-	Bichon Frises have a medium-high intelligence.</p>
+	<p>बिचोन फ्रिज़ एक छोटा कुत्ता है जिसका वजन लगभग ५-१० किलोग्राम (१०-२० पाउंड) होता है और कंधों पर २३-३० सेंटीमीटर (९ -१२ इंच) होता है, लेकिन थोड़े बड़े कुत्ते असामान्य नहीं होते हैं।
+	यह सिर थोड़ा गोल है और थूथन नुकीला नहीं है। पूंछ को लंबे और घुंघराले होने के लिए तैयार किया जाता है और इसे पीठ के ऊपर ले जाया जाता है। इसकी एक काली नाक और गहरी गोल आँखें हैं;
+	इसके सफ़ेद बालों में घुंघराले, घने कोट होते हैं, जिनमें बहुत कम बाल होते हैं, हालाँकि कई नस्ल में घुंघराले बाल दूसरों की तुलना में कम होते हैं। बफ़र की एक छोटी राशि,
+	क्रीम, या खुबानी का रंग उसके कान, थूथन, पंजे या शरीर के आसपास देखा जा सकता है, लेकिन आम तौर पर ये रंग उसके शरीर पर प्रभावी नहीं होते हैं। मानक कोट का रंग शुद्ध सफेद होता है।
+	सिर और पैर शरीर के आकार में आनुपातिक हैं, और कान और पूंछ प्राकृतिक हैं (डॉक नहीं किए गए या फसले नहीं)। बालों को एक समान लंबाई के समान बनाने के लिए अक्सर कोट की छंटनी की जाती है।
+	बिचोन फ्रिज़्स के पास एक मध्यम-उच्च बुद्धि है।</p>
 	
 	<p>
-		Here are links to other sites I made.  
+		यहाँ मेरे द्वारा बनाई गई अन्य साइटों के लिंक दिए गए हैं।  
 		
 		
-		<a href="https://archit-mishra.github.io/js/Pizza.html"><button>click here for pizza</button></a>
+		<a href="https://archit-mishra.github.io/js/Pizza.html"><button>पिज्जा के लिए यहां क्लिक करें</button></a>
 		
 		
-		<a href="https://archit-mishra.github.io/js/"><button>click here for java</Button></a>
+		<a href="https://archit-mishra.github.io/js/"><button>जावा के लिए यहां क्लिक करें</Button></a>
 	<p>
 		
     </body>
