--- a/Ishan.Html
+++ b/Ishan.Html
@@ -1,6 +1,6 @@
-!Doctype html>
+<!Doctype html>
 <html>
-  <body style="background-color:#00FFFF;">
+  <body style="background-color:#00FFFF; ">
       <h1 style="color: red;">Happy Birthday Ishan!</h1>
       <h2 style="color: red;">"I wish you a very happy birthday!"</h2>
       <p>Thank you for being a great friend to me, even though sometimes I can be mean. You are very nice and deserve way more than this. I am sorry that this is all I can give you. Happy birthday once again!😊😊😊(☞ﾟヮﾟ)☞(☞ﾟヮﾟ)☞;<p/>
