--- a/the-super-trio.html
+++ b/the-super-trio.html
@@ -1,9 +1,8 @@
 <html>
-  <head>
-    <title>The Super Trio</title>
-  </head>
+  <body style="background-color:#00FFFF;">
+      <h1 style="color: red;">This website will give you everything you need to know about, THE SUPER TRIO!</h1>
+      <h2 style="color: D4D92E;">"There is nothing here right now but you can be sure there will be something soon!"</h2>
+      
 
-  <body>
-  </body>
-
+    
 </html>
