--- a/the-super-trio.Html
+++ b/the-super-trio.Html
@@ -1,7 +1,7 @@
 <html>
   <body style="background-color:#FF5500;">
-      <h1 style="color: red;">This website will give you everything you need to know about, THE SUPER TRIO!</h1>
-      <h2 style="color: D4D92E;">"There is nothing here right now but you can be sure there will be something soon!"</h2>
+      <h1 style="color: 00F7FF;">This website will give you everything you need to know about, THE SUPER TRIO!</h1>
+      <h2 style="color: 0049FF;">"There is nothing here right now but you can be sure there will be something soon!"</h2>
       
  
     
