--- a/the-super-trio.Html
+++ b/the-super-trio.Html
@@ -1,8 +1,8 @@
 <html>
-  <body style="background-color:#FF5500;">
+  <body style="background-color:#F2E3A9;">
       <h1 style="color: 00F7FF;">This website will give you everything you need to know about, THE SUPER TRIO!</h1>
-      <h2 style="color: 0049FF;">"There is nothing here right now but you can be sure there will be something soon!"</h2>
+      <h2 style="color: 0049FF;">"There is nothing here right now but you can beF2E3A9 sure there will be something soon!"</h2>
       
- 
+
    
 </html>
