--- a/the-super-trio.Html
+++ b/the-super-trio.Html
@@ -1,8 +1,8 @@
 <html>
   <body style="background-color:#F2E3A9;">
       <h1 style="color: 0097FF;">This website will give you everything you need to know about, THE SUPER TRIO!</h1>
-      <h2 style="color: 0049FF;">"There is nothing here right now but you can be sure there will be something soon!"</h2>
-      
-
+      <h2 style="color: 0049FF;">"The super trio is a book series written and edited by my friends Ishan and Gauri, as well as me, Archit! It is a story about superhero versions of us and some made up people. The names are Icy Ishan, Girly Gauri, and me, Acing Archit. There are 2 others, though you will have to read the book to find out! Updates on the book will come below.</h2>
+    <p>Updates will be coming soon!</p>
+ 
    
 </html>
