--- a/mrs.creamer.html
+++ b/mrs.creamer.html
@@ -2,10 +2,10 @@
 <html>
   <body style="background-color:#00FFFF;">
       <h1 style="color: red;">Hi Mrs. Creamer!</h1>
-      <h2 style="color: red;">"Thank you for being such a nice teacher"</h2>
-      <p>Thanks for teaching me so much in this troublesome year, Especially some important things that will help me in the future. I hope one day I will see you again!😊😊😊(☞ﾟヮﾟ)☞(☞ﾟヮﾟ)☞;<p/>
-      <h3 style="color: red;">"Thank you for visiting this site"</h3>
+      <h2 style="color: red;">Thank you for being such a nice teacher</h2>
+      <p>Thanks for teaching me so much in this troublesome year, Especially some important things that will help me in the future in science, socail studies, reading, and writing!. I hope that I will see you again!😊😊😊(☞ﾟヮﾟ)☞(☞ﾟヮﾟ)☞;<p/>
+      <h3 style="color: red;">Thank you for visiting this site</h3>
       <img src="apple.jpeg">
 
-    
+     
 </html>
